network-policy/app-proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-proxy
  labels:
    app.kubernetes.io/name: app-proxy
