network-policy/app-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-proxy
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: app-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:1.23-alpine
          ports:
            - name: http
              containerPort: 80
            - name: http-status
              containerPort: 8080
          volumeMounts:
            - name: nginx-templates
              mountPath: /etc/nginx/templates
      volumes:
        - name: nginx-templates
          configMap:
            name: app-proxy-nginx-templates
