network-policy/app-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-proxy
spec:
  selector:
    app.kubernetes.io/name: app-proxy
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: http-status
      port: 8080
      targetPort: http-status
